tests/sintax-semanth/should_fail/missing_semicolon.tds
program
begin
	bool fun(integer w)
		begin
			integer a = 5
		end
end